# absurd-future

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/: tokio.rs
src/: LICENSE  lib.rs
